test/regress/ext:gc/br_on_cast08.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\90\80\80\80\00\03\5f"
    "\01\77\00\5f\01\7f\00\60\01\64\00\01\64\01\03\82"
    "\80\80\80\00\01\02\0a\91\80\80\80\00\01\8b\80\80"
    "\80\00\00\20\00\fb\18\00\00\00\01\00\0b"
  )
  "type mismatch"
)
